Custom embedding layer in Tensorflow using Word2Vec

--- a/Word2Vec_Code_Samples.ipynb
+++ b/Word2Vec_Code_Samples.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOFFHDmIFjMy7AI7SoNOIiD",
+      "authorship_tag": "ABX9TyP8cLEMTvKNBBmUnLzSe6h6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,29 +30,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ow00dxiF41Ow",
-        "outputId": "24f62505-4c33-4f6e-dc5c-d14ee518eec4"
+        "outputId": "ae036cad-63e1-48e0-dbf3-20390e483fd5"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Collecting gensim\n",
-            "  Downloading gensim-4.4.0-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl.metadata (8.4 kB)\n",
+            "Requirement already satisfied: gensim in /usr/local/lib/python3.12/dist-packages (4.4.0)\n",
             "Requirement already satisfied: numpy>=1.18.5 in /usr/local/lib/python3.12/dist-packages (from gensim) (2.0.2)\n",
             "Requirement already satisfied: scipy>=1.7.0 in /usr/local/lib/python3.12/dist-packages (from gensim) (1.16.3)\n",
             "Requirement already satisfied: smart_open>=1.8.1 in /usr/local/lib/python3.12/dist-packages (from gensim) (7.5.0)\n",
-            "Requirement already satisfied: wrapt in /usr/local/lib/python3.12/dist-packages (from smart_open>=1.8.1->gensim) (2.0.1)\n",
-            "Downloading gensim-4.4.0-cp312-cp312-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl (27.9 MB)\n",
-            "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m27.9/27.9 MB\u001b[0m \u001b[31m63.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: gensim\n",
-            "Successfully installed gensim-4.4.0\n"
+            "Requirement already satisfied: wrapt in /usr/local/lib/python3.12/dist-packages (from smart_open>=1.8.1->gensim) (2.0.1)\n"
           ]
         }
       ],
@@ -70,7 +65,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JO9jwucLCWir",
-        "outputId": "0ec9035d-fcd2-43a4-8ffa-e69719f79191"
+        "outputId": "1624c16a-11c3-4cc8-c84c-126241d1fbda"
       },
       "execution_count": 4,
       "outputs": [
@@ -112,7 +107,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "71779ca2",
-        "outputId": "d9babe08-efbd-457e-e266-0c826385e6cc"
+        "outputId": "60af412b-7af5-4996-9196-6eb3330e4894"
       },
       "source": [
         "#@title Enter your Kaggle credentials\n",
@@ -125,7 +120,7 @@
         "\n",
         "print(\"Kaggle environment variables set. You can now try downloading datasets.\")"
       ],
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -142,7 +137,7 @@
       "metadata": {
         "id": "Hc9f2kuoDcBL"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -182,7 +177,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "17209a01",
-        "outputId": "5bf06864-7937-4027-a6d6-138a170f3f38"
+        "outputId": "e0eed7ec-b32d-486b-bbf9-465f9d752c51"
       },
       "source": [
         "import os\n",
@@ -201,7 +196,7 @@
         "\n",
         "print('Kaggle API credentials configured successfully!')"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -264,7 +259,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zQsigBOdDeEW",
-        "outputId": "001daa10-aa31-4541-d54a-177d65780dae"
+        "outputId": "aa80ed9b-ff7d-449e-bef0-659397b68836"
       },
       "execution_count": 7,
       "outputs": [
@@ -275,8 +270,8 @@
             "Dataset URL: https://www.kaggle.com/datasets/adarshsng/googlenewsvectors\n",
             "License(s): unknown\n",
             "Downloading googlenewsvectors.zip to /content\n",
-            " 99% 1.62G/1.64G [00:18<00:00, 218MB/s]\n",
-            "100% 1.64G/1.64G [00:18<00:00, 95.5MB/s]\n"
+            "100% 1.63G/1.64G [00:16<00:00, 240MB/s]\n",
+            "100% 1.64G/1.64G [00:16<00:00, 105MB/s]\n"
           ]
         }
       ]
@@ -300,7 +295,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "e0kmSkosEcUz",
-        "outputId": "31d5ce91-b563-4505-ac40-01550969fb54"
+        "outputId": "2a5b78f6-68a4-42d6-b01e-9761e252d114"
       },
       "execution_count": 8,
       "outputs": [
@@ -356,7 +351,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_YXi-rTiEuYy",
-        "outputId": "814d60f6-e31c-4db0-a0cb-4e72a7925577"
+        "outputId": "03bb02c7-aab3-429a-e89f-4e3f803aa0ae"
       },
       "execution_count": 9,
       "outputs": [
@@ -461,6 +456,96 @@
             " -2.79296875e-01 -8.59375000e-02  9.13085938e-02  2.51953125e-01]\n",
             "\n",
             "Odd one out in the set ['man', 'woman', 'king', 'apple']: apple\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Let's use this pretrained Word2Vec model in the keras and tensorflow"
+      ],
+      "metadata": {
+        "id": "N4LBZfEv9ofZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "import tensorflow as tf\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Dense, GlobalAveragePooling1D\n",
+        "import gensim\n",
+        "\n",
+        "# Load the pretrained Word2Vec model (in binary format)\n",
+        "model_path = 'GoogleNews-vectors-negative300.bin'\n",
+        "model_word2vec = gensim.models.KeyedVectors.load_word2vec_format(model_path, binary=True)\n",
+        "\n",
+        "embedding_dim = 300  # Google Word2Vec model has 300 dimensions\n",
+        "vocab_size = len(model_word2vec.key_to_index)  # Total number of words in vocabulary\n",
+        "\n",
+        "# Initialize embedding matrix with zeros\n",
+        "embedding_matrix = np.zeros((vocab_size, embedding_dim))\n",
+        "\n",
+        "# Create a mapping from words to their corresponding vectors\n",
+        "word_index = {}  # This will store {word: index} mapping\n",
+        "\n",
+        "for i, word in enumerate(model_word2vec.key_to_index.keys()):\n",
+        "    embedding_matrix[i] = model_word2vec[word]\n",
+        "    word_index[word] = i  # Assign index to each word\n",
+        "\n",
+        "print(\"Embedding matrix created!\")\n",
+        "\n",
+        "\n",
+        "embedding_layer = tf.keras.layers.Embedding(\n",
+        "    input_dim=vocab_size,    # Size of vocabulary\n",
+        "    output_dim=embedding_dim,  # Word vector dimensions (300)\n",
+        "    weights=[embedding_matrix],  # Load pretrained Word2Vec weights\n",
+        "    input_length=20,  # Length of input sequences (adjust as needed)\n",
+        "    trainable=False  # Set to False to freeze the pretrained embeddings\n",
+        ")\n",
+        "\n",
+        "print(\"Embedding layer created!\")\n",
+        "\n",
+        "\n",
+        "# Define a simple model\n",
+        "model = Sequential([\n",
+        "    embedding_layer,  # Pretrained Word2Vec embeddings\n",
+        "    GlobalAveragePooling1D(),  # Averages word vectors\n",
+        "    Dense(64, activation='relu'),\n",
+        "    Dense(1, activation='sigmoid')  # Output layer for binary classification\n",
+        "])\n",
+        "\n",
+        "# Compile the model\n",
+        "model.compile(optimizer='adam', loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "\n",
+        "# Print model summary\n",
+        "summary = model.summary()\n",
+        "print('Summary - ', summary)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6dMTqiJf9vsj",
+        "outputId": "122e0667-64ca-4ad3-8cbd-2048a51629d3"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Embedding matrix created!\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.12/dist-packages/keras/src/layers/core/embedding.py:97: UserWarning: Argument `input_length` is deprecated. Just remove it.\n",
+            "  warnings.warn(\n"
           ]
         }
       ]
