Update markdown for pretrained Word2Vec model usage

--- a/Word2Vec_Code_Samples.ipynb
+++ b/Word2Vec_Code_Samples.ipynb
@@ -464,6 +464,7 @@
       "cell_type": "markdown",
       "source": [
         "# Let's use this pretrained Word2Vec model in the keras and tensorflow"
+        "# We'll be using Word2Vec pre-trained embedding"
       ],
       "metadata": {
         "id": "N4LBZfEv9ofZ"
